# game-discussion-nlp

./: README.md  flake.nix  pyproject.toml
data/: itch.txt  itch_topics.csv  steam.txt  steam_topics.csv  topics.csv
docs/: citations.bib
src/: nlp.py  webscraping.fsx
