[project]
name = "game-discussion-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.3",
    "kaleido>=1.1.0",
    "plotly>=6.3.1",
    "sentence-transformers>=5.1.2",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
